# LLM-Adventure-Generator

./: README.md
backend/: database.database  main.py  pyproject.toml  requirement.txt
backend/core/: config.py  models.py  prompts.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  util.js
frontend/src/components/: LoadingStatus.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
